public class OperatoreSedeAMA extends LavoratoreAMA {

}
