import java.time.LocalDate;

public abstract class Prenotazione {

	private int idPrenotazione;
	private LocalDate data;
	private String fasciaOraria;
	private String stato;

}
