public class SedeAMA {

	private int idSede;
	private String nome;
	private String indirizzo;

}
